--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -121,6 +121,7 @@ $font-default:						$font-lato
 $font-special:                      $font-roboto
 
 // Font size
+$font-xxs:                          10px
 $font-xs:							11px
 $font-s:							12px
 $font-r:							14px
