--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -19,6 +19,8 @@ a
   color: $warning !important
 .danger
   color: $danger !important
+.text-danger
+  color: $danger !important
 .default
   color: $default !important
 .error
@@ -110,6 +112,9 @@ a
 
 .pointer
   cursor: pointer
+
+.fa-minus-circle:hover
+  color: $danger
 
 .black
   color: $black
@@ -248,12 +253,14 @@ a
 .font-price
   font-size: $font-large
   color: $default
+  font-family: $font-special
   font-weight: $font-medium
 
 .secondary-price
   font-size: $font-xl
   color: $secondary-text
   font-weight: $font-medium 
+  font-family: $font-special
 
 .font-rating
   font-size: $font-m
@@ -289,6 +296,9 @@ hr
   padding: 50px !important
 .p-75
   padding: 75px 75px 0px  !important
+
+.pt-30
+  padding-top: 30px !important
 
 .pl-5
   padding-left: 5px !important
