--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -118,6 +118,9 @@
 	border: 1px solid $danger
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control
 	background: transparent 
+	border: transparent
+	padding: inherit
+
 .form-holder
 	width: 100%
 	padding: $p-20
