--- a/assets/sass/3-component/_modal.scss
+++ b/assets/sass/3-component/_modal.scss
@@ -35,7 +35,7 @@
     justify-content: center;
 }
 
-.modal-sm{
+.modal-sm, .otpModal{
     width: 450px !important;
     .custom-modal{
         padding: 0px;
