--- a/assets/sass/3-component/_progress.scss
+++ b/assets/sass/3-component/_progress.scss
@@ -6,7 +6,7 @@
       width: 100%;
       height: 10px;
       float: left;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
     .progress-bar-success{
       background: $success;
@@ -29,21 +29,21 @@
   justify-content: flex-start;
   flex-direction: column;
   .progress-bar{
-    width: 12px;
+    width: 10px;
   }
   .progress-bar-vertical{
     margin-right: 0px;
     margin-bottom: 10px;
   }
   span{
-    font-size: $font-s;
+    font-size: $font-xxs;
     color: $secondary-text;
     text-transform: uppercase;
   }
 }
 
 .progress-bar-vertical{
-  width: 12px;
+  width: 10px;
   min-height: 90px;
   display: inline-flex;
   align-items: flex-end;
@@ -58,7 +58,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   h6{
     margin: 0px;
   }
