--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -64,6 +64,16 @@
 	&.fail
 		.form-control
 			border-color: $danger
+
+.multi-input-wrapper
+	width: 100%
+	display: flex
+	align-items: center
+	justify-content: center
+	.form-control
+		width: 30px
+		margin: 0 10px
+
 .select-label
 	color: $half-black
 	background-color: transparent
