--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -75,6 +75,14 @@
 		margin: 0 10px
 		text-align: center
 
+.website-label
+	display: flex
+	align-items: center
+	justify-content: flex-start
+	label
+		margin-right: 5px
+		color: $black
+
 .select-label
 	color: $half-black
 	background-color: transparent
