few changes from sheets

--- a/components/feeds.html
+++ b/components/feeds.html
@@ -137,7 +137,7 @@
                     </ul>
                 </div>
                 <div class="topbar-right">
-                    <i class="fa fa-window-close-o secondary"></i>
+                    <span class="close-icon secondary">X</span>
                 </div>
             </div>
             <!-- app top -->
