--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -660,3 +660,9 @@ $mh-50:               0px 50px
   font-size: $font-m
   font-family: $font-special
   cursor: pointer
+  &::before
+    width: 10px
+    height: 10px
+    display: inline-flex
+    content: ""
+    background: url(../img/close.png) no-repeat center center
