--- a/components/chat-detail.html
+++ b/components/chat-detail.html
@@ -142,7 +142,7 @@
                         <i class="fa fa-calendar"></i>
                         <span>27-12-2020</span>
                     </div>
-                    <span class="close-icon secondary">X</span>
+                    <span class="close-icon secondary"></span>
                 </div>
             </div>
             <!-- app top -->
