--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -161,6 +161,7 @@ ul.simple-list
                     color: $primary-text
                     font-size: $font-xs
                     margin: 0px
+                    text-transform: capitalize
             .list-right
                 img
                     @include avatar($avatar-s)
