--- a/components/index.html
+++ b/components/index.html
@@ -548,8 +548,8 @@
                     </div>
                     <div class="topbar-right">
                         <ul class="topbar-list">
-                            <li><i class="fa fa-binoculars"></i> Followers | 17 </li>
-                            <li><i class="fa fa-user"></i> Following | 17 </li>                            
+                            <li><i class="fa fa-binoculars"></i> Followers 17 </li>
+                            <li><i class="fa fa-user"></i> Following 17 </li>                            
                         </ul>
                     </div>
                 </div>
