--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9879,7 +9879,7 @@ i.color-btn {
   width: 80px;
 }
 .table-card.dashboard-list-table .table-option .dash-img img {
-  height: 26px;
+  height: 20px;
 }
 .table-card.dashboard-list-table .table-content {
   width: calc(100% - 210px);
@@ -12186,7 +12186,7 @@ i.color-btn {
 }
 .progress-wrapper .progress {
   width: 100%;
-  height: 10px;
+  height: 12px;
   float: left;
   margin-bottom: 20px;
 }
@@ -12211,7 +12211,7 @@ i.color-btn {
   flex-direction: column;
 }
 .progress-vertical-wrapper .progress-bar {
-  width: 10px;
+  width: 12px;
 }
 .progress-vertical-wrapper .progress-bar-vertical {
   margin-right: 0px;
@@ -12224,7 +12224,7 @@ i.color-btn {
 }
 
 .progress-bar-vertical {
-  width: 10px;
+  width: 12px;
   min-height: 90px;
   display: inline-flex;
   align-items: flex-end;
@@ -12710,6 +12710,7 @@ ul.simple-list li:last-of-type {
   color: #77869A;
   font-size: 11px;
   margin: 0px;
+  text-transform: capitalize;
 }
 .member-list li a .list-right img {
   min-width: 38px !important;
@@ -15057,7 +15058,7 @@ input:checked + .slider:before {
   align-items: center;
   flex-direction: row;
 }
-.feeds-wrapper .feed-head .feed-head-left h3 {
+.feeds-wrapper .feed-head .feed-head-left h6 {
   margin-left: 5px;
   width: 90%;
   text-overflow: ellipsis;
@@ -15098,18 +15099,24 @@ input:checked + .slider:before {
   align-items: center;
   flex-direction: row;
 }
+.feeds-wrapper .feed-footer .feed-footer-left .price {
+  color: #7E8EA4;
+}
+.feeds-wrapper .feed-footer .feed-footer-left .price-sub {
+  color: #7E8EA4;
+}
 .feeds-wrapper .feed-footer .feed-footer-right {
   color: #7E8EA4;
 }
 .feeds-wrapper .feed-footer .feed-footer-right a {
   color: #7E8EA4;
-  margin-left: 15px;
+  margin-left: 20px;
 }
 .feeds-wrapper .feed-footer .feed-footer-right .btn {
   color: #fff !important;
 }
 .feeds-wrapper .feed-footer .feed-footer-right i {
-  font-size: 16px;
+  font-size: 20px;
 }
 .feeds-wrapper .feed-footer.top-feed-footer {
   border-top: 0px;
@@ -15297,7 +15304,7 @@ input:checked + .slider:before {
 }
 
 .account-card {
-  width: 48%;
+  width: calc(50% - 8px);
   float: left;
   margin-top: 30px;
 }
