--- a/assets/sass/4-pages/_dashboard.scss
+++ b/assets/sass/4-pages/_dashboard.scss
@@ -159,7 +159,7 @@
 }
 
 .account-card{
-    width: 48%;
+    width: calc(50% - 8px);
     float: left;
     margin-top: 30px;
     .secondary-price{
