--- a/assets/sass/4-pages/_feeds.scss
+++ b/assets/sass/4-pages/_feeds.scss
@@ -14,7 +14,7 @@
             display: flex;
             align-items: center;
             flex-direction: row;
-            h3{
+            h6{
                 margin-left: 5px;
                 @include word(90%);
             }
@@ -52,18 +52,24 @@
             display: flex;
             align-items: center;
             flex-direction: row;
+            .price{
+                color: $secondary-text;
+            }
+            .price-sub{
+                color: $secondary-text;
+            }
         }
         .feed-footer-right{
             a{
                 color: $secondary-text;
-                margin-left: 15px;
+                margin-left: 20px;
             }
             .btn{
                 color: $white !important;
             }
             color: $secondary-text;
             i{
-                font-size: $font-m;
+                font-size: $font-l;
             }
         }
         &.top-feed-footer{
