--- a/components/product-details.html
+++ b/components/product-details.html
@@ -141,9 +141,9 @@
                 </div>
                 <div class="topbar-right">
                     <ul class="topbar-list">
-                        <li><i class="fa fa-binoculars"></i> Followers | 17 </li>
-                        <li><i class="fa fa-user"></i> Following | 17 </li>
-                        <li><i class="fa fa-eye"></i> Deals | 6 </li>
+                        <li><i class="fa fa-binoculars"></i> Followers 17 </li>
+                        <li><i class="fa fa-user"></i> Following 17 </li>
+                        <li><i class="fa fa-eye"></i> Deals 6 </li>
                     </ul>
                 </div>
                 <div class="topbar-right">
