--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -521,7 +521,7 @@
                 @include wordlines();
             }
             span{
-                font-size: $font-s;
+                font-size: $font-r;
                 color: $secondary-text;
             }
             ul{
