--- a/assets/sass/3-component/_chat.sass
+++ b/assets/sass/3-component/_chat.sass
@@ -13,10 +13,10 @@
 	width: 100%
 	float: left
 	background: $secondary-text
-	height: 40px
+	height: auto
 	display: flex
 	align-items: center
-	padding: 0 30px
+	padding: 20px
 	justify-content: space-between	
 	h2
 		font-size: $font-m
@@ -33,7 +33,7 @@
 			@include border-radius(50%)
 
 .messenger
-	padding: 20px 30px !important
+	padding: 20px !important
 	width: 100%
 	float: left
 	background: $white
@@ -281,7 +281,7 @@
 	background: $white
 	z-index: 99999
 	overflow: hidden
-	padding: 15px 30px
+	padding: 20px
 	input[type="text"], input[type="password"], textarea
 		background: $white
 		border: 0
@@ -317,7 +317,7 @@
 			color: $secondary-text
 			font-size: $font-l
 	.msg-text
-		width: calc(100% - 68px)
+		width: calc(100% - 69px)
 		float: left
 		height: 100%
 		position: relative
