--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -138,7 +138,10 @@
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control
 	background: transparent 
 	border: transparent
-	padding: inherit
+	padding: 0
+	height: auto
+	-webkit-appearance: none
+	appearance: none
 
 .form-holder
 	width: 100%
