--- a/components/index.html
+++ b/components/index.html
@@ -582,9 +582,9 @@
                     </div>
                     <div class="topbar-right">
                         <ul class="topbar-list">
-                            <li><i class="fa fa-binoculars"></i> Followers | 17 </li>
-                            <li><i class="fa fa-user"></i> Following | 17 </li>
-                            <li><i class="fa fa-eye"></i> Deal made | 6 </li>
+                            <li><i class="fa fa-binoculars"></i> Followers 17 </li>
+                            <li><i class="fa fa-user"></i> Following 17 </li>
+                            <li><i class="fa fa-eye"></i> Deal made 6 </li>
                         </ul>
                     </div>
                     <div class="topbar-right">
