--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -135,13 +135,16 @@
 .form-control.failure
 	// box-shadow: 0 2px 0 0 $success
 	border: 1px solid $danger
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control, .form-control.disabled
 	background: transparent 
 	border: transparent
 	padding: 0
 	height: auto
 	-webkit-appearance: none
-	appearance: none
+	resize: none
+	min-height: 25px
+.magic-checkbox.disabled ~ label
+	pointer-events: none
 
 .form-holder
 	width: 100%
