--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -143,6 +143,11 @@
 	-webkit-appearance: none
 	resize: none
 	min-height: 25px
+	pointer-events: none
+
+datepicker
+	padding-left: 40px	
+
 .magic-checkbox.disabled ~ label
 	pointer-events: none
 
@@ -171,8 +176,9 @@ input[type="password"]
 
 /* Search top */
 .search-top
-	width: calc(100% - 220px)
+	width: calc(100% - 230px)
 	float: right
+	margin-right: 10px
 	.form-group
 		margin-bottom: 0px	
 		.form-control
