--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10169,13 +10169,26 @@ i.color-btn {
 
 .messenger {
   padding: 20px !important;
+  padding-bottom: 0px !important;
   width: 100%;
   float: left;
   background: #fff;
+  min-height: 400px;
   max-height: calc(100vh - 310px) !important;
   overflow-x: hidden;
   overflow-y: auto;
   -moz-appearance: none !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.messenger .no-chat {
+  width: 100%;
+  height: 100%;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .messenger::-webkit-scrollbar {
   width: 4px;
@@ -10192,7 +10205,10 @@ i.color-btn {
   margin: 0;
   padding: 0px;
   font-size: 14px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
+}
+.messenger .message-wrap:last-of-type {
+  margin-bottom: 0px;
 }
 .messenger .message-wrap .message {
   position: relative;
@@ -10202,7 +10218,6 @@ i.color-btn {
   font-size: 14px;
   display: flex;
   align-items: flex-end;
-  margin-bottom: 5px;
 }
 .messenger .message-wrap .message .chat-load img {
   width: auto;
