--- a/components/chat-detail.html
+++ b/components/chat-detail.html
@@ -238,23 +238,20 @@
                     <h2>One to one chat</h2>
                     <div class="option">
                         <img src="../assets/img/avatar.jpg" />
-                        <!-- <img src="../assets/img/avatar1.jpg" />
+                        <img src="../assets/img/avatar1.jpg" />
                         <img src="../assets/img/avatar.jpg" />
-                        <img src="../assets/img/avatar1.jpg" /> -->
+                        <img src="../assets/img/avatar1.jpg" />
                     </div>
                 </div>
 
                 <div class="messenger">
 
-                    <div class="message-wrap">
-                        <div class="message">                
-                            <div class="info">Hello there!<br>Good Morning. this is lorem ipsum test chat. the chat conversation for chat bot.<br/><a href="#">https://manytools.org/http-html-text/lorem-ipsum-generator/</a>
-                                <div class="time-left">3 Mins ago</div>
-                            </div>
-                        </div>
+                    <!-- No message -->
+                    <div class="no-chat">
+                        <h2>No Messages</h2>
                     </div>
 
-                    <div class="message-wrap">               
+                    <!-- <div class="message-wrap">               
                         <div class="message me">
                             <div class="info">Hi. Good Morning
 
@@ -263,39 +260,13 @@
                         </div>
                     </div> 
 
-                    <div class="message-wrap"> 
-                        <div class="message">
-                            <div class="info">How are you?
-
+                    <div class="message-wrap">
+                        <div class="message">                
+                            <div class="info">Hello there!<br>Good Morning. this is lorem ipsum test chat. the chat conversation for chat bot.<br/><a href="#">https://manytools.org/http-html-text/lorem-ipsum-generator/</a>
                                 <div class="time-left">3 Mins ago</div>
                             </div>
                         </div>
-                    </div>  
-
-                    <div class="message-wrap">               
-                        <div class="message me">
-                            <div class="info">Hello there!. Good Morning. this is lorem ipsum test chat. the chat conversation for chat bot.<br/><a href="#">https://manytools.org/http-html-text/lorem-ipsum-generator/</a>
-                                <div class="time-right">3 Mins ago</div>
-                            </div>                                              
-                        </div>
-                    </div> 
-
-                    <div class="message-wrap"> 
-                        <div class="message option-content">
-                            <div class="info"><img src="../assets/img/card-img.png" alt="Chat" />
-                                <div class="time-left">3 Mins ago</div>
-                            </div>
-                        </div>
-                    </div>   
-
-                    <div class="message-wrap"> 
-                        <div class="message me">
-                            <div class="info"><img src="../assets/img/card-img.png" alt="Chat" />
-                                <div class="time-right">3 Mins ago</div>
-                            </div>
-                        </div>
-                    </div>  
-
+                    </div>                     -->
 
                 </div>
                 <div class="sender">
