--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10184,7 +10184,7 @@ i.color-btn {
 }
 .messenger .no-chat {
   width: 100%;
-  height: 100%;
+  height: 400px;
   float: left;
   display: flex;
   align-items: center;
@@ -14937,7 +14937,7 @@ input:checked + .slider:before {
 
 .price {
   float: left;
-  color: #333;
+  color: #333 !important;
   font-family: "Roboto", sans-serif;
   font-size: 26px;
   font-weight: 400;
@@ -15168,6 +15168,9 @@ input:checked + .slider:before {
 
 .feeds-no-options .feeds-wrapper .feed-body {
   height: calc(100% - 93px) !important;
+}
+.feeds-no-options .feeds-wrapper.left-side-bar-enabled {
+  height: calc(470px + 122px) !important;
 }
 
 .more-info {
