--- a/assets/sass/3-component/_modal.scss
+++ b/assets/sass/3-component/_modal.scss
@@ -93,6 +93,9 @@
             font-size: $font-l;
             text-transform: capitalize;
         }
+        h6{
+            margin-top: 0px !important;
+        }
         .dropdown-label{
             width: 100%;
             float: left;
