--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -165,6 +165,9 @@ a
 .bt-1
   border-top: 1px solid $border
 
+.bb-1
+  border-bottom: 1px solid $border
+
 .flex-center
   display: flex
   align-items: center
@@ -299,6 +302,10 @@ hr
 
 .pt-30
   padding-top: 30px !important
+
+  
+.pb-15
+  padding-bottom: 15px !important
 
 .pl-5
   padding-left: 5px !important
