--- a/components/index.html
+++ b/components/index.html
@@ -1735,6 +1735,165 @@
             </div>
         </div>
 
+        <!-- Modals -->
+        <div class="row mb-20 mt-20">
+            <div class="col-lg-12 col-md-12">
+                <h4>Modals</h4>
+                <div class="modal-wrapper">
+                    <div class="custom-modal">
+                        <!-- Modal title -->
+
+                        <div class="custom-modal-title modal-orange">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3><i class="fa fa-bolt"></i> Collaboration Project</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                    <div class="dropdown-label">Service</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="custom-modal-body">
+
+                            <div class="row mb-30">
+                                <div class="col-lg-12 col-md-12">
+                                    <div class="modal-second-title"><span>JAMES111</span> HAS INVITED YOU FOR A COLLABORATION PROJECT WITH YOU!</div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+
+                                <div class="col-lg-4 col-md-4 br-1">
+                                    <div class="modal-left">
+
+                                        <div class="thumb-wrapper">
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb active" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;"></div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs"><div class="add-thumb">+</div></div>
+                                        </div>
+                                        <div class="upload-info success mt-0"><i class="fa fa-info-circle"></i> e.g Newly refurbished room for 2 people</div>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-right">
+                                        <div class="row">
+                                            <div class="col-lg-8 col-md-8">
+                                                <div class="form-group">
+                                                    <label class="control-label">Project Members</label>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-lg-2 col-md-2">
+                                                        <div class="avatar avatar-m">
+                                                            <img src="../assets/img/user.gif" title="User"/>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2">
+                                                        <div class="avatar avatar-m">
+                                                            <img src="../assets/img/user.gif" title="User"/>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2">
+                                                        <div class="avatar avatar-m">
+                                                            <img src="../assets/img/user.gif" title="User"/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 col-md-4">
+                                                <div class="form-group">
+                                                    <label class="control-label">Project Manager</label>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-lg-2 col-md-2">
+                                                        <div class="avatar avatar-m">
+                                                            <img src="../assets/img/user.gif" title="User"/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-30">
+                                            <div class="col-lg-12 col-md-12">
+                                                <h4>sdadsaasdasd</h4>
+                                                <p class="secondary mt-30">sdadsaasdasdsdadsaasdasd sdadsaasdasdsdadsaasdasdsdadsaasdasd</p>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-30">
+                                            <div class="col-lg-4 col-md-4">
+                                                <div class="form-group">
+                                                    <label class="control-label">Deadline</label>
+                                                    <div class="btn block-btn gray-btn"><i class="fa fa-calendar"></i> Deadline</div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 col-md-4">
+                                                <div class="form-group">
+                                                    <label class="control-label">Location</label>
+                                                    <div class="btn block-btn gray-btn"><i class="fa fa-map-marker"></i> Location</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-30">
+                                            <div class="col-lg-12 col-md-12">
+                                                <div class="form-group">
+                                                    <label class="control-label">Allocated Amount</label>
+                                                    <span class="price">
+                                                        $510.00
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="custom-modal-footer bt-1 pt-30">
+                            <div class="row">
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-footer-left">By confirming it means you agree with Collabro’s <a>terms and conditions.</a> Alternatively you can check with the seller first.</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4 text-right">
+                                    <a class="btn btn-svg secondary-btn-border" href="#"><i class="fa fa-phone-square"></i> Chat</a>
+                                    <a class="btn danger-btn ml-30" href="#">Close</a>
+                                </div>
+                            </div>
+                            
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer content -->
