--- a/assets/sass/3-component/_slickslider.scss
+++ b/assets/sass/3-component/_slickslider.scss
@@ -49,6 +49,24 @@
 .custom-slider{
     width: 100%;
     float: left;
+    &.mob-slider{
+        .imgcontainer{
+            height: 200px !important;
+            .anguvideo{
+                height: 200px;
+                iframe{
+                    width: 100%;
+                    height: 100%;
+                    @include border-radius(5px);
+                    .player{
+                        max-width: 100% !important;
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+        }
+    }
     .imgcontainer{
         width: 100%;
         float: left;
