--- a/assets/sass/3-component/_chat.sass
+++ b/assets/sass/3-component/_chat.sass
@@ -45,7 +45,8 @@
 	-moz-appearance: none !important
 	display: flex
 	flex-direction: column
-	justify-content: flex-end
+	// justify-content: flex-end
+	flex-flow: column nowrap
 	.no-chat
 		width: 100%
 		height: 400px
