--- a/assets/sass/3-component/_button.scss
+++ b/assets/sass/3-component/_button.scss
@@ -146,6 +146,7 @@
 	// @include box-shadow($box-shadow-btn !important);
 	cursor: default;
 	text-transform: none;
+	font-size: $font-r;
 	text-align: left;
 	i{
 		margin-left: 0px !important;
