--- a/assets/sass/3-component/_form-modal.scss
+++ b/assets/sass/3-component/_form-modal.scss
@@ -2,6 +2,9 @@
     width: 100%;
     float: left;
     padding-right: 15px;
+    .slider-wrapper{
+        min-height: 310px;
+    }
 }
 
 .modal-right{
