--- a/components/index.html
+++ b/components/index.html
@@ -1756,6 +1756,45 @@
                             </div>
                         </div>
 
+                        <div class="custom-modal-title modal-danger">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3><i class="fa fa-bolt"></i> Collaboration Project</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                    <div class="dropdown-label">Service</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="custom-modal-title modal-primary">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3><i class="fa fa-bolt"></i> Collaboration Project</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                    <div class="dropdown-label">Service</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="custom-modal-title modal-warning">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3><i class="fa fa-bolt"></i> Collaboration Project</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                    <div class="dropdown-label">Service</div>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Modal body -->
                         <div class="custom-modal-body">
 
